# ppargo

./: .gitignore  Cargo.toml  README.md  ppargo.toml  vcpkg.json
example/: ppargo.toml
examples/: ppargo.toml
src/: main.cpp  main.rs
src/cli/: catalog.cpp  catalog.hpp  cli.cpp  cli.hpp  help.cpp  help.hpp  mod.rs  parser.cpp  parser.hpp
src/cli/commands/: add.cpp  add.rs  build.cpp  build.rs  check.cpp  commands.cpp  commands.hpp  common.cpp  common.hpp  fetch.cpp  (+19 more)
src/core/: dependency_artifacts.hpp  lockfile.cpp  lockfile.hpp  lockfile_parse.cpp  lockfile_write.cpp  manifest.cpp  manifest.hpp  manifest.rs  manifest_defaults.cpp  manifest_parse.cpp  manifest_write.cpp  mod.rs  paths.cpp  paths.hpp  project.rs  scaffold.cpp  scaffold.hpp  system.cpp  system.hpp  templates.cpp  templates.hpp  templates.rs
src/package/: backend.cpp  backend.hpp  home.cpp  home.hpp  manager.cpp  manager.hpp  manager.rs  manager_lock.cpp  manager_lock.hpp  manager_mutation.cpp  manager_mutation.hpp  manager_workflow.cpp  manager_workflow.hpp  mod.rs  vcpkg.cpp  vcpkg.hpp  vcpkg.rs
src/registry/: reference.cpp  reference.hpp  reference_auth.cpp  reference_auth.hpp  reference_http.cpp  reference_index.cpp  reference_index.hpp  reference_json.cpp  reference_publish.cpp  reference_support.cpp  reference_support.hpp
src/util/: console.cpp  console.hpp  containers.hpp  environment.hpp  error.cpp  error.hpp  fs.cpp  fs.hpp  mod.rs  output.cpp  output.hpp  process.cpp  process.hpp  process_common.cpp  process_detail.hpp  process_posix.cpp  process_windows.cpp  result.hpp  text.hpp
(+16 files in other folders)
