[package]
name = "argo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
glob = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dirs = "5"
fs_extra = "1.3.0"
walkdir = "2.5.0"
which = "8.0.0"
anyhow = "1.0.100"
